--- a/index.html
+++ b/index.html
@@ -11,29 +11,33 @@
     <header>
         <nav>
             <a href="index.html">Главная</a>
-            <a>Полезная информация</a>
-            <a>Кликер</a>
-            <a>Tilda</a>
-            <a>GitHub</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=2s&ab_channel=RickAstley">Полезная информация</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=2s&ab_channel=RickAstley">Кликер</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=2s&ab_channel=RickAstley">Tilda</a>
+            <a href="https://github.com/Oleg-1734">GitHub</a>
         </nav>
     </header>
     <main>
-        <section class="mee">
-            <div class="mee_avatar"></div>
-            <div class="mee_txt"></div>
+        <section class="Mee">
+            <div class="mee_avatar"> 
+                <img src="https://media.75.ru/xn--90anlffn/resources/129116/.jpg">
+            </div>
+            <div class="text">
+                <h2>Привет, я топовый HTML разроботчит Олежа.</h2>
+                <h2>Я занимаюсь разроботкой простых сайтов и игр с использование языков JavaScript,CSS и HTML</h2>
+            </div>
         </section>
     </main>
     <section class="Prohod_1_html">
-        <div></div>
-        <div></div>
+        <img class="kartinki" src = 'https://cdn-icons-png.flaticon.com/128/8263/8263091.png'>
+        <img class="kartinki" src = 'https://cdn-icons-png.flaticon.com/128/5968/5968242.png'>
+        <img class="kartinki" src = 'https://cdn-icons-png.flaticon.com/128/1199/1199124.png'>
     </section>
     <section class="Prohod_2_css">
-        <div></div>
-        <div></div>
+        
     </section>
     <section class="Prohod_3_js">
-        <div></div>
-        <div></div>
+        
     </section>
 
 </body>
